--- a/faq.html
+++ b/faq.html
@@ -35,7 +35,8 @@
         <div class="panel">
                 <p>Currently we have Classic Hosting Site, Discord Bot Page, Flexbox Inc, Gridline Corp, for more
                         information,
-                        images and previews <a href="#">click here</a> (*we don't provide the hosting functionality for
+                        images and previews <a href="templates.html">click here</a> (*we don't provide the hosting
+                        functionality for
                         Classic Hosting)</p>
         </div>
         <button class="faq">What is a Normal Website?</button>
