--- a/templates.html
+++ b/templates.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 
 <head>
-
+        <meta charset="UTF-8">
+        <title>Spino Develops</title>
+        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet"
+                href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
-
+        <p>Hello does this work</p>
 </body>
