Lots of Changes including Navbar align
Changes include Navbar back to left align, Responsive for iPhone 8, 8+ SE iPad Pro 10.5", iPad Pro 12.9, iPad mini, iPad 8th Gen. Templates.html will be continued to be worked on!

--- a/home.html
+++ b/home.html
@@ -87,7 +87,7 @@
     <div class="li1">Copyright &copy; 2020-2021 Bilal A and Spino Develops</div>
     <script>
         let i = 0;
-        const txt = (`Hello and Welcome to Spino Develops. My name is Bilal and I'm a Web Developer with over a year of experience in HTML, CSS and JS.`);
+        const txt = (`Hello and Welcome to Spino Develops. My name is Bilal and, I'm a Web Developer with over a year of experience in HTML, CSS and JS.`);
         let speed = 65;
         function typeWriter() {
             if (i < txt.length) {
