--- a/pricing.html
+++ b/pricing.html
@@ -25,7 +25,7 @@
                 <div class="card">
                         <div class="header">Starter Website</div>
                         <div class="price">$79.99 USD</div>
-                        <div class="li">Pre Built Website</div>
+                        <div class="li">Pre Built Website <a href="templates.html">templates</a></div>
                         <div class="li">4 Web Pages</div>
                         <div class="li">5 Revisions</div>
                         <div class="li">1-2 Week Delivery</div>
