--- a/contact.html
+++ b/contact.html
@@ -23,8 +23,7 @@
         <div class="h0">Contact Me</div>
         <div class="h0" style="font-size: 21px;">(* Contact Page is currently in testing/development *)</div>
         <div class="form">
-                <form id="contact"
-                        action="https://send.pageclip.co/VZ73602b8dgAXtACEpjTSaPcXcfmjPJO/SpinoDevelops_ContactForm"
+                <form id="contact" action="https://send.pageclip.co/vSebhTg9fA2eepZZyuQgEbT5EqB4uEmk/ContactForm"
                         class="pageclip-form" method="post">
                         <label>Full Name</label><br>
                         <input id="name" type="text" class="c" placeholder="John Doe"><br>
