--- a/contact.html
+++ b/contact.html
@@ -26,14 +26,14 @@
                 <form id="contact" action="https://send.pageclip.co/vSebhTg9fA2eepZZyuQgEbT5EqB4uEmk/ContactForm"
                         class="pageclip-form" method="post">
                         <label>Full Name</label><br>
-                        <input id="name" type="text" class="c" placeholder="John Doe"><br>
+                        <input id="name" name="fullname" type="text" class="c" placeholder="John Doe"><br>
                         <label>Email Address</label><br>
-                        <input id="email" type="email" class="c" placeholder="johndoe@gmail.com"><br>
+                        <input id="email" name="email" type="email" class="c" placeholder="johndoe@gmail.com"><br>
                         <label>Discord Username (if applicable)</label><br>
-                        <input id="dUser" type="text" class="c" placeholder="JohnDough#1672"><br>
+                        <input id="dUser" name="discordUsername" type="text" class="c" placeholder="JohnDough#1672"><br>
                         <label>Question or Comment</label><br>
-                        <input id="qorc" type="text" class="c" placeholder="What is . . .?"><br>
-                        <button type="submit" id="submit" class="pageclip-form__submit">Submit</button>
+                        <input id="qorc" type="text" name="question" class="c" placeholder="What is . . .?"><br>
+                        <button type="submit" id="submit" class="pageclip-form__submit"><span>Send</span></button>
                 </form>
         </div>
         <script src="https://s.pageclip.co/v1/pageclip.js" charset="utf-8"></script>
