Added Github page in social media footer

--- a/faq.html
+++ b/faq.html
@@ -78,6 +78,8 @@
                         <div class="li1"><a href="https://instagram.com/spinodevelops" class="fa fa-instagram"></a>
                                 <div class="li1"><a href="https://facebook.com/spinodevelops"
                                                 class="fa fa-facebook"></a></div>
+                                <div class="li1"><a href="https://github.com/bilalahmed1905" class="fa fa-github"></a>
+                                </div>
                         </div>
                         <div class="li"></div>
                 </div>
