--- a/home.html
+++ b/home.html
@@ -76,6 +76,7 @@
             <div class="li1"><a href="https://twitter.com/SpinoDevelops" class="fa fa-twitter"></a></div>
             <div class="li1"><a href="https://instagram.com/spinodevelops" class="fa fa-instagram"></a></div>
             <div class="li1"><a href="https://facebook.com/spinodevelops" class="fa fa-facebook"></a></div>
+            <div class="li1"><a href="https://github.com/bilalahmed1905" class="fa fa-github"></a></div>
         </div>
         <div class="table">
             <div class="tt">Contact Info</div>
