--- a/faq.html
+++ b/faq.html
@@ -69,7 +69,7 @@
                         <div class="tt">Links</div>
                         <div class="li1"><a class="ec" href="home.html">Home</a></div>
                         <div class="li1"><a class="ec" href="pricing.html">Pricing</a></div>
-                        <div class="li1"><a class="ec" href="faq.html">FAQ</a></div>
+                        <div class="li1"><a class="ec" href="templates.html">Website Templates</a></div>
                         <div class="li1"><a class="ec" href="contact.html">Contact</a></div>
                 </div>
                 <div class="table">
@@ -107,5 +107,6 @@
                                 }
                         });
                 }
+                let faqButton = document.getElementsByClassName("plus")
         </script>
 </body>
