--- a/templates.html
+++ b/templates.html
@@ -9,5 +9,13 @@
 </head>
 
 <body>
-
+        <div class="navbar">
+                <ul style="background-color: rgb(27, 22, 18);">
+                        <li><a class="x" href="#"><img src="SpinoDevelopsLogo.png" alt="SpinoDevelopsLogo"></a></li>
+                        <li><a class="a" href="home.html">Home</a></li>
+                        <li><a class="a" href="pricing.html">Pricing</a></li>
+                        <li><a class="a" href="faq.html">FAQ</a></li>
+                        <li><a class="a" href="contact.html">Contact Me</a></li>
+                </ul>
+        </div>
 </body>
