--- a/contact.html
+++ b/contact.html
@@ -23,9 +23,7 @@
         <div class="h0">Contact Me</div>
         <div class="h0" style="font-size: 21px;">(* Contact Page is currently in testing/development *)</div>
         <div class="form">
-                <form id="contact" data-netlify="true"
-                        action="https://send.pageclip.co/vSebhTg9fA2eepZZyuQgEbT5EqB4uEmk/ContactForm"
-                        class="pageclip-form" method="post">
+                <form id="contact" data-netlify="true" class="pageclip-form" method="post">
                         <label>Full Name</label><br>
                         <input id="name" name="fullname" type="text" class="c" placeholder="John Doe"><br>
                         <label>Email Address</label><br>
