Minor form change

--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,8 @@
                         <label>Discord Username (if applicable)</label><br>
                         <input id="dUser" name="discordUsername" type="text" class="c" placeholder="JohnDough#1672"><br>
                         <label>Question or Comment</label><br>
-                        <input id="qorc" type="text" name="question" class="c" placeholder="What is . . .?"><br>
+                        <input id="qorc" type="text" name="Question_or_Comment" class="c"
+                                placeholder="What is . . .?"><br>
                         <button type="submit" id="submit" class="pageclip-form__submit"><span>Send</span></button>
                 </form>
         </div>
