--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Contact</title>
         <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="https://s.pageclip.co/v1/pageclip.css" media="screen">
 </head>
 
 <body>
@@ -21,7 +22,8 @@
         </div>
         <div class="h0">Contact Me</div>
         <div class="form">
-                <form id="contact" data-netlify="true" class="pageclip-form" method="post">
+                <form id="contact" action="https://send.pageclip.co/vSebhTg9fA2eepZZyuQgEbT5EqB4uEmk/ContactForm"
+                        class="pageclip-form" method="post">
                         <label>Full Name</label><br>
                         <input id="name" name="fullname" type="text" class="c" placeholder="John Doe"><br>
                         <label>Email Address</label><br>
@@ -34,6 +36,7 @@
                         <button type="submit" id="submit" class="pageclip-form__submit"><span>Send</span></button>
                 </form>
         </div>
+        <script src="https://s.pageclip.co/v1/pageclip.js" charset="utf-8"></script>
 </body>
 
 
