--- a/contact.html
+++ b/contact.html
@@ -8,30 +8,62 @@
         <title>Contact</title>
         <link rel="stylesheet" href="styles.css">
         <link rel="stylesheet" href="https://s.pageclip.co/v1/pageclip.css" media="screen">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
 </head>
 
 <body>
-        <div class="navbar">
-                <ul style="background-color: rgb(27, 22, 18);">
-                        <li><a class="x" href="#"><img src="SpinoDevelopsLogo.png" alt="SpinoDevelopsLogo"></a></li>
-                        <li><a class="a" href="home.html">Home</a></li>
-                        <li><a class="a" href="pricing.html">Pricing</a></li>
-                        <li><a class="a" href="faq.html">FAQ</a></li>
-                        <li><a class="a" href="contact.html">Contact Me</a></li>
-                </ul>
+        <div class="bc">
+                <nav class="navbar is-dark" role="navigation" aria-label="main navigation">
+                        <div class="navbar-brand">
+                                <a class="navbar-item" href="https://bulma.io">
+                                        <img src="SpinoDevelopsLogo.png" width="30" height="30">
+                                </a>
+
+                                <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false"
+                                        data-target="SpinoDevelopsNav">
+                                        <span aria-hidden="true"></span>
+                                        <span aria-hidden="true"></span>
+                                        <span aria-hidden="true"></span>
+                                </a>
+                        </div>
+
+                        <div id="SpinoDevelopsNav" class="navbar-menu">
+                                <div class="navbar-start">
+                                        <a class="navbar-item" href="home.html">Home</a>
+                                        <a class="navbar-item" href="pricing.html">Pricing</a>
+                                        <a class="navbar-item" href="faq.html">FAQ</a>
+                                        <a class="navbar-item" href="contact.html">Contact Me</a>
+                                </div>
+
+                                <div class="navbar-end">
+                                        <div class="navbar-item">
+                                                <div class="buttons">
+                                                        <a class="button is-primary">
+                                                                <strong>Help</strong>
+                                                        </a>
+                                                        <a class="button is-info">
+                                                                Checkout
+                                                        </a>
+                                                </div>
+                                        </div>
+                                </div>
+                        </div>
+                </nav>
         </div>
         <div class="h0">Contact Me</div>
         <div class="form">
-                <form id="contact" action="https://send.pageclip.co/vSebhTg9fA2eepZZyuQgEbT5EqB4uEmk/ContactForm"
+                <form id="contact" action="https://send.pageclip.co/vSebhTg9fA2eepZZyuQgEbT5EqB4uEmk"
                         class="pageclip-form" method="post">
                         <label>Full Name</label><br>
-                        <input id="name" name="fullname" type="text" class="c" placeholder="John Doe"><br>
+                        <input id="name" name="fullname" type="text" class="c is-normal" placeholder="John Doe"><br>
                         <label>Email Address</label><br>
-                        <input id="email" name="email" type="email" class="c" placeholder="johndoe@gmail.com"><br>
+                        <input id="email" name="email" type="email" class="c is-normal"
+                                placeholder="johndoe@gmail.com"><br>
                         <label>Discord Username (if applicable)</label><br>
-                        <input id="dUser" name="discordUsername" type="text" class="c" placeholder="JohnDough#1672"><br>
+                        <input id="dUser" name="discordUsername" type="text" class="c is-normal"
+                                placeholder="JohnDough#1672"><br>
                         <label>Question or Comment</label><br>
-                        <input id="qorc" type="text" name="Question_or_Comment" class="c"
+                        <input id="qorc" type="text" name="Question_or_Comment" class="c is-normal"
                                 placeholder="What is . . .?"><br>
                         <button type="submit" id="submit" class="pageclip-form__submit"><span>Send</span></button>
                 </form>
