--- a/home.html
+++ b/home.html
@@ -6,26 +6,55 @@
     <title>Spino Develops</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
 </head>
 
 <body>
     <div id="bgrnd">
-        <div class="navbar">
-            <ul>
-                <li><a class="x" href="#"><img src="SpinoDevelopsLogo.png" alt="SpinoDevelopsLogo"></a></li>
-                <li><a class="a" href="home.html">Home</a></li>
-                <li><a class="a" href="pricing.html">Pricing</a></li>
-                <li><a class="a" href="faq.html">FAQ</a></li>
-                <li><a class="a" href="contact.html">Contact Me</a></li>
-            </ul>
-        </div>
+        <nav class="navbar is-dark " role="navigation" aria-label="main navigation">
+            <div class="navbar-brand">
+                <a class="navbar-item" href="https://bulma.io">
+                    <img src="SpinoDevelopsLogo.png" width="30" height="30">
+                </a>
+
+                <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false"
+                    data-target="SpinoDevelopsNav">
+                    <span aria-hidden="true"></span>
+                    <span aria-hidden="true"></span>
+                    <span aria-hidden="true"></span>
+                </a>
+            </div>
+
+            <div id="SpinoDevelopsNav" class="navbar-menu">
+                <div class="navbar-start">
+                    <a class="navbar-item" href="home.html">Home</a>
+                    <a class="navbar-item" href="pricing.html">Pricing</a>
+                    <a class="navbar-item" href="faq.html">FAQ</a>
+                    <a class="navbar-item" href="contact.html">Contact Me</a>
+                </div>
+
+                <div class="navbar-end">
+                    <div class="navbar-item">
+                        <div class="buttons">
+                            <a class="button is-primary">
+                                <strong>Help</strong>
+                            </a>
+                            <a class="button is-info">
+                                Checkout
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </nav>
         <h1 class="h0"
             style="text-decoration: underline;color: slategrey;font-family: 'New Tegomin', serif;font-size: 40px;">
             Spino Develops</h1>
         <div class="op">
             <div class="h00" style="text-align: center;"><b>Your</b> place to get Responsive, Elegant and Cheap Websites
             </div>
-            <div class="h0" id="u" style="font-size: 26px;font-family: 'Baskerville', sans-serif ;color: white;"></div>
+            <div class="h0" id="xxy" style="font-size: 26px;font-family: 'Baskerville', sans-serif ;color: white;">
+            </div>
         </div>
     </div>
     <div id="whyUs">
@@ -83,6 +112,7 @@
             <div class="li1"><a class="ec" href="mailto:bilalahmed1905@gmail.com">Email</a></div>
             <div class="li1"><a class="ec" href="">Discord (DM Spino#2494)</a></div>
             <div class="li1"><a class="ec" href="https://discord.gg/bmsvFDThMQ">Discord Server</a></div>
+            <div class="li1"><a class="ec" href="#">Testing</a></div>
         </div>
     </div>
     <div class="li1">Copyright &copy; 2020-2021 Bilal A and Spino Develops</div>
@@ -92,15 +122,27 @@
         let speed = 65;
         function typeWriter() {
             if (i < txt.length) {
-                document.getElementById("u").innerHTML += txt.charAt(i);
+                document.getElementById("xxy").innerHTML += txt.charAt(i);
                 i++;
                 setTimeout(typeWriter, speed);
             }
 
         }
+        document.addEventListener('DOMContentLoaded', () => {
+            const $navbarBurgers = Array.prototype.slice.call(document.querySelectorAll('.navbar-burger'), 0);
+            if ($navbarBurgers.length > 0) {
+                $navbarBurgers.forEach(el => {
+                    el.addEventListener('click', () => {
+                        const target = el.dataset.target;
+                        const $target = document.getElementById(target);
+                        el.classList.toggle('is-active');
+                        $target.classList.toggle('is-active');
 
-        typeWriter()
-        // More Code
+                    });
+                });
+            }
+
+        });
 
     </script>
 </body>
