--- a/pricing.html
+++ b/pricing.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet"
                 href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
+        <script src="script.js"></script>
 </head>
 
 <body>
@@ -108,4 +109,21 @@
 
         </div>
         <div class="li1">Copyright &copy; 2020-2021 Bilal A and Spino Develops</div>
+        <script>
+                document.addEventListener('DOMContentLoaded', () => {
+                        const $navbarBurgers = Array.prototype.slice.call(document.querySelectorAll('.navbar-burger'), 0);
+                        if ($navbarBurgers.length > 0) {
+                                $navbarBurgers.forEach(el => {
+                                        el.addEventListener('click', () => {
+                                                const target = el.dataset.target;
+                                                const $target = document.getElementById(target);
+                                                el.classList.toggle('is-active');
+                                                $target.classList.toggle('is-active');
+
+                                        });
+                                });
+                        }
+
+                });
+        </script>
 </body>
