Changes to txt and nav color
minor text changes and nav as well

--- a/contact.html
+++ b/contact.html
@@ -35,20 +35,15 @@
                                         <a class="navbar-item" href="faq.html">FAQ</a>
                                         <a class="navbar-item" href="contact.html">Contact Me</a>
                                 </div>
-
                                 <div class="navbar-end">
                                         <div class="navbar-item">
                                                 <div class="buttons">
                                                         <a class="button is-primary">
-                                                                <strong>Help</strong>
-                                                        </a>
-                                                        <a class="button is-info">
-                                                                Checkout
-                                                        </a>
+                                                                <strong>Help</strong></a>
+                                                        <a class="button is-info" href="">Checkout</a>
                                                 </div>
                                         </div>
                                 </div>
-                        </div>
                 </nav>
         </div>
         <div class="h0">Contact Me</div>
