--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
 <body>
     <script src="script.js"></script>
     <div id="bgrnd">
-        <nav class="navbar is-dark " role="navigation" aria-label="main navigation">
+        <nav class="navbar is-dark" role="navigation" aria-label="main navigation">
             <div class="navbar-brand">
                 <a class="navbar-item" href="home.html">
                     <img src="SpinoDevelopsLogo.png" width="30" height="30">
@@ -38,15 +38,11 @@
                     <div class="navbar-item">
                         <div class="buttons">
                             <a class="button is-primary">
-                                <strong>Help</strong>
-                            </a>
-                            <a class="button is-info">
-                                Checkout
-                            </a>
+                                <strong>Help</strong></a>
+                            <a class="button is-info">Checkout</a>
                         </div>
                     </div>
                 </div>
-            </div>
         </nav>
         <h1 class="h0"
             style="text-decoration: underline;color: slategrey;font-family: 'New Tegomin', serif;font-size: 40px;">
@@ -59,7 +55,7 @@
         </div>
     </div>
     <div id="whyUs">
-        <div class="h01">Skills</div>
+        <div class="h01" style="color: black;">Skills</div>
         <p class="p">HTML</p>
         <div class="container">
             <div class="skills html">90%</div>
@@ -81,9 +77,9 @@
         <div class="h0">Why Me??</div>
         <div class="reasons">
             <div class="rl">Over A Year of experience in Web Development</div>
-            <div class="rl">Lots of Templates for Pre Built Websites</div>
-            <div class="rl">Options to use frameworks such as Bulma</div>
-            <div class="rl">Responsively Designed Websites</div>
+            <div class="rl">Options to use frameworks such as Bulma or Bootstrap</div>
+            <div class="rl">Templates for Pre Built Websites</div>
+            <div class="rl">Responsive Websites</div>
             <div class="rl">All Browser Compatibility</div>
             <div class="rl">Custom Website Options</div>
             <div class="rl">Express Delivery</div>
