--- a/templates.html
+++ b/templates.html
@@ -38,15 +38,11 @@
                                         <div class="navbar-item">
                                                 <div class="buttons">
                                                         <a class="button is-primary">
-                                                                <strong>Help</strong>
-                                                        </a>
-                                                        <a class="button is-info">
-                                                                Checkout
-                                                        </a>
+                                                                <strong>Help</strong></a>
+                                                        <a class="button is-info">Checkout</a>
                                                 </div>
                                         </div>
                                 </div>
-                        </div>
                 </nav>
         </div>
         <script>
