--- a/pricing.html
+++ b/pricing.html
@@ -39,15 +39,11 @@
                                         <div class="navbar-item">
                                                 <div class="buttons">
                                                         <a class="button is-primary">
-                                                                <strong>Help</strong>
-                                                        </a>
-                                                        <a class="button is-info">
-                                                                Checkout
-                                                        </a>
+                                                                <strong>Help</strong></a>
+                                                        <a class="button is-info">Checkout</a>
                                                 </div>
                                         </div>
                                 </div>
-                        </div>
                 </nav>
         </div>
         <div class="h0" style="margin-bottom: 50px;text-decoration: underline;">
