--- a/faq.html
+++ b/faq.html
@@ -2,11 +2,13 @@
 <html lang="en">
 
 <head>
-        <meta charset="UTF-8">
         <title>Spino Develops</title>
         <link rel="stylesheet" href="styles.css">
         <link rel="stylesheet"
                 href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
         <script src="script.js"></script>
 </head>
@@ -149,3 +151,5 @@
                 }
         </script>
 </body>
+
+</html>
